# tinytapeout-transformer

./: .gitignore  Makefile  README.md  info.yaml  pyproject.toml
.github/workflows/: fpga.yaml  gds-fit.yaml  gds.yaml  precision-sweep.yaml  test.yaml
docs/: info.md
docs/readme-assets/: generate_diagrams.py
python/: README.md  model.yaml  pyproject.toml
python/csrc/: ttt_chip_server.cpp
python/tests/: test_chip_backend.py  test_pcb_backend.py  test_quantized_model.py  test_reference_runtime.py  test_train_smoke.py
python/ttt/: __init__.py  download_data.py  int5_model.py  model.py  pcb.py  quantization.py  quantize.py  runtime.py  sample.py  train.py
scripts/: synth.ys
src/: config.json  tt_um_sohamgovande_sa2x2.sv  tt_um_sohamgovande_transformer.sv
src/control/: sa2x2_controller.sv
src/core/: pe_mac.sv  systolic_array_2x2.sv
test/: Makefile  README.md  tb.v  test.py
