[project]
name = "ttt"
version = "0.1.0"
description = "TinyTapeout int5 training and inference tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0.0",
    "torch>=2.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ttt*"]

[tool.pytest.ini_options]
pythonpath = ["."]
